--- a/appspec.yml
+++ b/appspec.yml
@@ -3,7 +3,7 @@ os: linux
 
 files:
   - source: /
-    destination: /home/ubuntu # 인스턴스에서 파일이 저장될 위치
+    destination: /home/ubuntu/edev # 인스턴스에서 파일이 저장될 위치
 
 hooks:
   AfterInstall:
