--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -57,11 +57,10 @@ jobs:
 
       # AWS 사용자 정보 입력
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-access-key-id: ${{ secrets.ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.ACCESS_KEY_SECRET }}
           aws-region: ap-northeast-2
+          role-to-assume: ${{ secrets.ROLE_TO_ASSUME }}
 
       # S3에 zip 파일 업로드
       - name: Upload to S3
