--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -60,8 +60,8 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-region: ap-northeast-2
-          aws-access-key-id: ${{ secrets.ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.ACCESS_KEY_SECRET }}
+          role-session-name: GitHubActions
+          role-to-assume: ${{ secrets.ROLE_TO_ASSUME }}
 
       # S3에 zip 파일 업로드
       - name: Upload to S3
